apps/web/app/globals.css
@import "@radix-ui/colors/red.css";
@import "@radix-ui/colors/red-dark.css";
@import "@radix-ui/colors/gray.css";
@import "@radix-ui/colors/gray-alpha.css";
@import "@radix-ui/colors/gray-dark.css";
@import "@radix-ui/colors/blue.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--primary: #005cb1;
	--primary-2: #004c93;
	--primary-3: #003b73;
	--secondary: #2eb4ff;
	--secondary-2: #1696e0;
	--secondary-3: #117ebd;
	--tertiary: #c5eaff;
	--tertiary-2: #d3e5ff;
	--tertiary-3: #e0edff;
	--filler: #efefef;
	--filler-2: #e4e4e4;
	--filler-3: #e2e2e2;
	--filler-txt: #b3b3b3;
	--text-primary: #0d1b2a;
	--text-secondary: #ffffff;
	--shadow-gray-11: hsl(0, 0%, 13%);
	--header-height: 80px;
	--vh100-offset: calc(100vh - var(--header-height));
	--foreground-rgb: #000000;
	--background-start-rgb: 214, 219, 220;
	--background-end-rgb: 255, 255, 255;
	--gradient-border-radius: 12px;
}

@media (prefers-color-scheme: dark) {
	:root {
		--foreground-rgb: #ffffff;
		--background-start-rgb: 0, 0, 0;
		--background-end-rgb: 0, 0, 0;
	}
}

body {
	overflow-x: hidden;
}

body,
html {
	color: #000000;
	background-color: #f2f2f2;
}
.dashboard-grid {
	display: grid;
	grid-template-columns: auto 1fr 1fr;
	grid-template-areas:
		"sidebar main main"
		"sidebar main main";
	height: 100dvh;
	width: 100vw;
	min-height: 100dvh;
}

.dashboard-grid {
	display: grid;
	grid-template-columns: auto 1fr 1fr;
	grid-template-areas:
		"sidebar main main"
		"sidebar main main";
	height: 100dvh;
	width: 100vw;
	min-height: 100dvh;
}

.left-perspective {
	transform: scale(1.2) rotateX(47deg) rotateY(31deg) rotate(324deg);
}

::-webkit-scrollbar {
	width: 4px;
	height: 4px;
}

/* Track */
::-webkit-scrollbar-track {
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	background: var(--gray-7);
	border-radius: 10px;
}

.dark .dark-button-shadow {
	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1) inset;
}

.dark-button-shadow {
	box-shadow: 0 1.5px 0 0 rgba(255, 255, 255, 0.2) inset;
}

.dark .gray-button-shadow {
	box-shadow: 0 1.5px 0 0 rgba(255, 255, 255, 0.1) inset;
}

.dark .gray-button-border {
	@apply border-gray-2;
}

.gray-button-border {
	@apply border-gray-8;
}

.dark .dark-button-border {
	@apply border-gray-2;
}

.dark-button-border {
	@apply border-gray-12;
}

.gray-button-shadow {
	box-shadow: 0 1.5px 0 0 rgba(255, 255, 255, 0.4) inset;
}

.dark ::selection {
	background: #ffffff;
	color: #000000;
}

::selection {
	background: #000000;
	color: #ffffff;
}

.wrapper {
	@apply mx-auto w-[92%] max-w-screen-2xl;
}

.wrapper-max {
	@apply max-w-screen-2xl;
}

.wrapper-sm {
	@apply max-w-5xl;
}

.prose
	:where(blockquote p:first-of-type):not(
		:where([class~="not-prose"], [class~="not-prose"] *)
	)::before {
	content: "“";
	display: none;
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

* {
	min-width: 0;
	min-height: 0;
}

.text-primary {
	color: var(--primary);
}

a.text-primary:hover {
	color: var(--primary-2);
}

.text-secondary {
	color: var(--secondary);
}

a.text-secondary:hover {
	color: var(--secondary-2);
}

a.bg-primary:hover {
	background-color: var(--primary-2);
}

.bg-dark {
	background-color: var(--secondary-3);
}

.bg-gradient {
	@apply bg-gradient-to-r transition-all duration-300 from-secondary-2 to-secondary-3;
}

.bg-gradient:hover {
	@apply bg-gradient-to-r from-secondary to-secondary-3;
}

.bg-animated {
	content: "";
	background: linear-gradient(60deg, var(--primary), var(--secondary));
	animation: animatedgradient 2s ease infinite;
	background-size: 300% 300%;
}

.animated-yaxis {
	animation: animatedyaxis 6s ease infinite forwards;
}

.TooltipContent[data-side="left"] {
	animation: slideLeft 0.2s ease-out;
}

.TooltipContent[data-side="right"] {
	animation: slideRight 0.2s ease-out;
}

.TooltipContent[data-side="top"] {
	animation: slideUp 0.2s ease-out;
}

.TooltipContent[data-side="bottom"] {
	animation: slideDown 0.2s ease-out;
}

.TooltipContent {
	transform-origin: var(--radix-tooltip-content-transform-origin);
}

@keyframes slideRight {
	from {
		opacity: 0;
		transform: translateX(-10px);
	}
	to {
		transform: translateX(0px);
		opacity: 1;
	}
}

/* SVG path animation */

@keyframes svgpathframes {
	0% {
		stroke-dasharray: 100;
		stroke-dashoffset: 100;
	}
	50% {
	}
	100% {
		stroke-dashoffset: 0;
	}
}

.svgpathanimation {
	stroke-dasharray: 100;
	stroke-dashoffset: 100;
	animation: svgpathframes 0.5s ease-in-out forwards;
}

.svgpathanimationrepeat {
	animation: svgpathframes 0.5s ease-in-out forwards;
	animation-iteration-count: infinite;
}

@keyframes slideLeft {
	from {
		opacity: 0;
		transform: translateX(10px);
	}
	to {
		transform: translateX(0px);
		opacity: 1;
	}
}

@keyframes slideUp {
	from {
		opacity: 0;
		transform: translateY(-5px);
	}
	to {
		transform: translateY(0px);
		opacity: 1;
	}
}

@keyframes slideDown {
	from {
		opacity: 0;
		transform: translateY(5px);
	}
	to {
		transform: translateY(0px);
		opacity: 1;
	}
}

.button-gradient-border::before {
	content: "";
	position: absolute;
	inset: 0;
	padding: 1px;
	border-radius: var(--gradient-border-radius);
	background: linear-gradient(to bottom, #ffffff40 70%, #ffffff00 100%);
	-webkit-mask:
		linear-gradient(#fff 0 0) content-box,
		linear-gradient(#fff 0 0);
	-webkit-mask-composite: xor;
	mask-composite: exclude;
}

@media all and (max-width: 1024px) {
	.dashboard-grid {
		grid-template-columns: 1fr;
		grid-template-rows: 1fr;
		grid-template-areas:
			"main"
			"main";
	}
}

@media (prefers-color-scheme: dark) {
	body,
	html {
		color: #000000;
	}
}

h1,
h2,
h3,
h4,
h5 {
	@apply font-normal tracking-normal text-[1.75rem] leading-[2.5rem] md:text-[2.5rem] md:leading-[3.25rem];
}

a,
p,
span,
input,
label,
button {
	@apply tracking-normal leading-[1.5rem];
}

a {
	@apply transition-all;
}

nav ul {
	@apply list-none;
}

nav.mobile a {
	@apply flex w-full;
}

label {
	@apply block text-sm font-semibold text-left;
}
/* ... */

